# bare-metal-drivers

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: stm32f1xx.h
include/drivers/: dma.h  gpio.h  i2c.h  spi.h  uart.h
linker/: STM32F103C8.ld
src/: main.c
src/drivers/: dma.c  gpio.c  i2c.c  spi.c  uart.c
startup/: startup_STM32F1.c
